# weather-service

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  init.sql  pyproject.toml  setup.cfg
.github/actions/python-setup/: action.yml
.github/workflows/: cd-build-and-push.yml  cd.yml  ci-cd.yml  ci-main-branch.yml  ci.yml  main-ci.yml
api/: Dockerfile  api.py  requirements.txt
api_service/: Dockerfile
backend/: .dockerignore  Dockerfile  db_init.py  requirements.txt
backend/bootstrap_service/: Dockerfile  bootstrap.py  init.py
backend/init_service/: Dockerfile  init.py  post_init.py
backend/maintenance_service/: Dockerfile  maintenance.py
backend/openmeteo_client/: __init__.py  config.json  openmeteo_client.py
bootstrap_service/: Dockerfile  bootstrap.py  pyproject.toml
build_service/: Dockerfile  README.md
config/: README.md  config.json
daily_maintenance_service/: Dockerfile  maintenance.py
forecast_build_service/: Dockerfile  build_models.py
forecast_service/: Dockerfile  config.json  forecast.py
frontend_api/: README.md  frontend_api.py  pyproject.toml
maintenance_service/: Dockerfile  maintenance.py  pyproject.toml
models/: __init__.py  models.py
openmeteo_client/: .dockerignore  Dockerfile  README.md  config.json  openmeteo_client.py  pyproject.toml  requirements.txt
tests/: __init__.py  test_basic.py  test_dummy.py
weather_api/: Dockerfile  pyproject.toml
weather_models/: README.md  __init__.py  pyproject.toml  weather_models.py
weekly_maintenance_service/: Dockerfile  maintenance.py
