[project]
name = "frontend_api"
version = "0.1.0"
description = ""
authors = [{ name = "Jonas Werner", email = "werner-jonas@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.116.1,<0.117.0)", "uvicorn (>=0.35.0,<0.36.0)"]

[tool.poetry.scripts]
start = "frontend_api.app:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
