[project]
name = "openmeteo-client"
version = "0.1.0"
description = ""
authors = [{ name = "Jonas Werner", email = "werner-jonas@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "openmeteo_requests (>=1.6.0,<2.0.0)",
    "openmeteo_sdk (>=1.20.1,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
