[project]
name = "weather_models"
version = "0.4.0"
description = ""
authors = [{ name = "Jonas Werner", email = "werner-jonas@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "joblib (>=1.5.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
